--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,6 +1,6 @@
 ---
-title             : "Self-relevance modulates the priorization of the good character in perceptual matching"
-shorttitle        : "Priorization of the good character"
+title             : "The good person is me: Spontaneous self-referential process explains the prioritization of moral character"
+shorttitle        : "Priorization of moral character"
 
 author: 
   - name          : "Hu Chuan-Peng"
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social perception and moral psychology, yet how these information is process is unclear. Both negativity effect and positivity effect are possible. Here, we examined these two possibilities using social associataive learning task, where participants first associat social conceptions with neutral stimuli and then perform cognitive tasks (e.g., matching judgment). Across 9 experiments (N = 4XX, trials = XXX), we found a robust positivity effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, participants were still sensitive to good character: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested that good character is prioritized in social associative learning task and this effect was due a spontaneous self-referential processing.
+ Moral character is central to social perception and moral psychology, previous studies explain the salience effect of moral character in terms of valence effect, i.e., either negativity effect and positivity effect. In this study, we report 9 experiments (N = 4XX, trials = XXX) where we find (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -75,7 +75,7 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
  <!-- What is the theoretic meaning of the series study? -->
 
-Alternative title: The good person is me: Spontaneous self-referential may explain the prioritization of good moral character
+Alternative title: Self-relevance modulates the priorization of the good character in perceptual matching
 
 # Introduction
 
@@ -88,14 +88,24 @@ Ideas:
 little value in relying on people's self-reported moral principles or moral ideals to predict their real life behaviors, "paradox of morality" (Ellemers, 2019);
 moral associative learning as an stronger predictor??
 -->
-[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. Crucially, moral character central for self-concept and identity too. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. 
+[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
 
 [Two possibilities about moral character]
-Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people deferentially process the information related to moral character and prioritize information with certain moral character? One possibility is that 'bad' character are prioritized. This possibility is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001; @pratto_automatic_1991]. A few studies provided evidence for this possibility. For example, @anderson_visual_2011 asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. Similarly, @eiserbeck_visual_2020 combined  associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
+Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people prioritize information with certain moral character? Focus on the valence of moral character, previous studies explore both negativity effect and positivity effect. The negativity effect, i.e., 'bad' character are prioritized, is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001; @pratto_automatic_1991]. A few studies provided evidence for this possibility. For example, @anderson_visual_2011 asked participants to associate faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their visual awareness by pressing buttons. The results revealed that faces associated negative social behaviors dominated participants' visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. Similarly, @eiserbeck_visual_2020 combined  associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
 
-It is also possible, however, that the negativity effect in impression formation may not be able to generalized to perceptual process, instead, positive moral characters are prioritized [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
+The positivity effect, i.e., good moral characters are prioritized, is also plausible [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Sometimes, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.
 
-Here, we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
+These two possibilities, however, ignore the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker []. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. A lot of studies revealed that people distort their perception, memory, and change their actions to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participant has spontaneous self-referential for the perception tasks where no self-referential process were not explicitly excluded [citation related to spontaneous self-referential].
+
+Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character.
+
+## Prioritization of moral chararcter
+
+
+## Using soical associative task
+
+
+we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
 
 The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the effect could not be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group [@turner_rediscovering_1987]. Moral character is an important criterion for social categorization [@mchugh_moral_2019; @descioli_side_taking_2016]. However, the above four experiments could not distinguish between these two possibilities, because "good person" could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
 
@@ -2597,14 +2607,13 @@ Correlation analysis showed that most psychological distance ratings were positi
 See Figure \@ref(fig:plot-person-dist) and Figure \@ref(fig:plot-person-dist-net).
 
 # Discussion
-We human inevitably view other people and ourselves in a moral lens. Yes how this moral lens will change our information processes is unknown. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and explored the mechanisms underlying the effect. We found robust evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. The prioritization effect occur when self and good character are combined, whether task-relevant or not. When good character were other-referential, even implicitly, the information process might be slowed down. Together, our findings highlight the importance of the self-referential in perceiving positive moral character. These findings contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
+We human inevitably view other people and ourselves in a moral lens [citation is needed]. Yes how this moral lens will change our information processes is unknown. Across nine experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and explored the mechanisms underlying the effect. We found robust evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. The prioritization effect occur when self and good character are combined, whether task-relevant or not. When good character were other-referential, even implicitly, the information process might be slowed down. Together, our findings highlight the importance of the self-referential in perceiving positive moral character. These findings contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-First, we examined the perceptual process of moral character to understand how moral information are processed. Prior research has demonstrated that bad moral behavior is stronger in impression formation [] and bad moral character are attended quicker than neutral moral character []. The empirical studies on the moral character often focus on self-reported  data rather than behavioral response. In this paper, we examined the perceptual processes of moral character. In doing so, we shifted the focus from consequences of information process of moral character to the information process itself, thus broaden the scope of the existing research. 
+First, we examined the perceptual process of moral character to understand how moral information are processed. Prior research has demonstrated that bad moral behavior is stronger in impression formation [citation] and bad moral character are attended quicker than neutral moral character []. The empirical studies on the moral character often focus on self-reported  data rather than behavioral response. In this paper, we examined the perceptual processes of moral character. In doing so, we shifted the focus from consequences of information process of moral character to the information process itself, thus broaden the scope of the existing research. 
 
 Second, perceptual processing is the upstream of our information that can help us understand priority of different information. We thus contributed to the research on moral character by demonstrating that information related to good character in general, and good moral self in specific, is prioritized. Specifically, we found that instantly learned moral character information can change the information process of neutral, non-social information. Presumably this prioritization occurs because good moral character and moral self is central to one's social life. Research has found that moral self is essential for one's identity and people has stronger self-enhancement effect in moral domain than in other social domain. This positivity effect is opposite to negativity effect in impression formation, suggesting that impression formation and perceptual-matching may involved different information process mechanisms. This positivity effect, though surprising at first, is well supported by previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
 
 The absence of negativiity effect may also caused by the fact that the bad character here is an abstract concept that may not bring concrete threatening to the participants, therefore it is not as strong as previous studies used emotional stimuli that has higher arousal. Besides, recent study found that when the moral violation is not life-threatening, the impression of bad character is volatile in the social context [].
-
 
 Third, knowing that good character and moral-self is prioritized is not sufficient; we need to know why this prioritization occurs. Our results indicate that the good character prioritization is driven by spontaneous self-referential processing. Also, these results revealed that either a general-self based social categorization or moral self as anchor view alone can explain the results. Instead, we proposed that moral-self based social categorization can better account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. Further, our results showed that we not only regard moral self as the true-self, but also seek to categorize information based on moral-self: when good-other creates an ambiguous situation, the responses was slowed down in perceptual processing. 
 
